--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Pokémon Catch Sim",
+  "name": "Pokémon Catch Sim v0.0.9",
   "short_name": "PokeCatch",
-  "start_url": "./index.html",
+  "start_url": "./index.html?v=0.0.9",
   "display": "standalone",
-  "background_color": "#B0E0E6",
-  "theme_color": "#B0E0E6",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "orientation": "portrait",
   "icons": [
     {
